# ai-dev-tools

./: README.md  render.yaml
01-todo-app/: README.md  main.py  pyproject.toml
01-todo-app/todoproject/: settings.py
01-todo-app/todos/: admin.py  models.py  tests.py  views.py
01-todo-app/todos/migrations/: 0001_initial.py
01-todo-app/todos/templates/todos/: base.html  todo_confirm_delete.html  todo_form.html  todo_list.html
02-end-to-end/backend/: pyproject.toml
02-end-to-end/frontend/src/: App.jsx  index.css
02-end-to-end/frontend/src/components/: Leaderboard.jsx  SnakeGameCanvas.jsx
02-end-to-end/frontend/src/contexts/: AuthContext.jsx  AuthContext.test.jsx
02-end-to-end/frontend/src/services/: api.js  api.test.js  gameLogic.js
02-end-to-end/frontend/src/styles/: Game.css
02-end-to-end/online-coding-interviews/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  SETUP.md  TESTING.md  docker-compose.yml  fly.toml  render.yaml
02-end-to-end/online-coding-interviews/backend/: pyproject.toml  requirements.txt  run_tests.bat  run_tests.sh  test_integration.py
02-end-to-end/online-coding-interviews/backend/app/: __init__.py  main.py
02-end-to-end/online-coding-interviews/backend/tests/: __init__.py  test_integration.py
02-end-to-end/online-coding-interviews/frontend/: index.html  package-lock.json  package.json
02-end-to-end/snake-game/: CLAUDE.md  README.md
02-end-to-end/snake-game/frontend/: package-lock.json  package.json
03-mcp/: .gitignore  README.md  main.py  search.py  test.py
(+23 files in other folders)
